<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.infinity.popularmovies.MainActivity">
    <item android:id="@+id/action_change_sort_order"
        android:orderInCategory="90"
        android:title="@string/action_title_sort_by"
        android:icon="@drawable/view_sort_descending"
        app:showAsAction="ifRoom">

        <!-- Sort options submenu-->
        <menu android:id="@+id/sort_order_submenu">
            <group android:id="@+id/sort_order_group"
                android:checkableBehavior="single">
                <item android:id="@+id/action_popularity_sort"
                    android:title="@string/action_sort_by_popularity" />

                <item android:id="@+id/action_rating_sort"
                    android:title="@string/action_sort_by_rating" />

                <item android:id="@+id/action_favourite_sort"
                    android:title="@string/action_sort_by_favourite" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
